test/success/effects/nested/main.sk
module Main {

pub effect Bar {
    fn bar()
}

fn foo() {
    println("Hello from foo");
}

fn baz() {
    println("Hello from baz");
}

fn main() {
    with bar = foo {
        bar();
        with bar = baz {
            bar();
        }
    }
    foo();
}

}
