test/errors/effects/unused_handler/main.sk
module Main {

pub effect Bar {
    fn bar()
}

fn foo() {
    println("Hello from foo");
}

fn baz() {
}

fn main() {
    with bar = foo {
        baz();
    }
}

}
